--- a/index.html
+++ b/index.html
@@ -448,6 +448,22 @@
                 </div>
             </div>
         </section>
+        <section class="subscribe section__global">
+            <div class="container">
+                <h3 class="subbscribe__heading subtitle__global">
+                    Subscribe to our newsletter
+                </h3>
+                <div class="row">
+                    <div class="col-12">
+                        <form action="your_server_script.php" method="post">
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" required>
+                            <button type="submit">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="container">
                 <div class="row">
@@ -456,7 +472,6 @@
                             <img src="./img/logo.jpeg" alt="Logo SMART-compliance">
                         </a>
                     </div>
-
                 </div>
                 <div class="row">
                     <div class="col-6">
