--- a/index.html
+++ b/index.html
@@ -133,11 +133,13 @@
                         </ul>
                     </div>
                     <div class="col-6">
-                        <h3 class="about-us__subtitle subtitle__global">
-                            Book your consulatation now
-                        </h3>
                         <div class="calendly-container">
-                            <p>CALENDLY</p>
+
+                            <h3 class="calendly__subtitle about-us__subtitle subtitle__global">
+                                Book your consulatation now
+                            </h3>
+
+                            <a class="calendly__link" href="https://calendly.com/ekaterina-anthony/30min" target="_blank">CALENDLY</a>
                         </div>
                     </div>
                 </div>
@@ -455,15 +457,14 @@
         </section>
         <section class="subscribe section__global">
             <div class="container">
-                <h3 class="subbscribe__heading subtitle__global">
+                <h2 class="subscribe__heading heading__global">
                     Subscribe to our newsletter
-                </h3>
+                </h2>
                 <div class="row">
                     <div class="col-12">
                         <form action="#" method="post">
-                            <label for="email">Email:</label>
-                            <input type="email" id="email" name="email" required>
-                            <button type="submit">Subscribe</button>
+                            <input class="header__form-input" type="email" id="email" name="email" placeholder="Email" required>
+                            <input class="header__form-submit" type="submit" value="Subscribe">
                         </form>
                     </div>
                 </div>
@@ -472,14 +473,14 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-4 logo-wrapper">
                         <a href="#" class="footer__logo">
                             <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
                         </a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-4">
                         <div class="footer__info">
                             <p class="footer__descr">
                                 SMART-compliance GmbH
@@ -491,6 +492,10 @@
                                 Nummer: CHE-250.927.503
                             </p>
                         </div>
+
+
+                    </div>
+                    <div class="col-4">
                         <address class="footer__address flex">
                             <p class="address__descr">
                                 Registered office:
@@ -502,9 +507,8 @@
                             <a class="address__link" href="mailto:contact@smart-compliance.ch">contact@smart-compliance.ch</a>
                             <a class="address__link" href="tel:+41765820974">+41&nbsp;765 82 0974</a>
                         </address>
-
                     </div>
-                    <div class="col-6">
+                    <div class="col-4">
                         <nav class="footer__nav">
                             <ul class="footer__list list-reset">
                                 <li class="footer__item">
