--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <div class="subscription-form flex">
                         <form class="header__form" action="#" method="post">
                             <label class="header__form-label" for="email">Subscribe to&nbsp;our newsletter</label>
-                            <input class="header__form-input" type="email" id="email" name="email" placeholder="Email" required>
-                            <input class="header__form-submit" type="submit" value="Subscribe">
+                            <input class="header__form-input" type="email" id="email" name="email" placeholder="Email" >
+                            <button class="header__form-submit btn" type="submit" value="Subscribe">Subscribe</button>
                         </form>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                                 Book your consulatation now
                             </h3>
 
-                            <a class="calendly__link" href="https://calendly.com/ekaterina-anthony/30min" target="_blank">CALENDLY</a>
+                            <a class="calendly__link btn" href="https://calendly.com/ekaterina-anthony/30min" target="_blank">CALENDLY</a>
                         </div>
                     </div>
                 </div>
@@ -484,7 +484,7 @@
                         <p class="learn__descr descr__global">
                             Visit our blog for latest news &amp;&nbsp;insights
                         </p>
-                        <button class="btn-reset learn__btn">
+                        <button class="btn-reset learn__btn btn">
                             See more
                         </button>
                     </div>
@@ -495,7 +495,7 @@
                         <p class="learn__descr descr__global">
                             Stay informed about our webinars, educational materials, and special offers
                         </p>
-                        <button class="btn-reset learn__btn">
+                        <button class="btn-reset learn__btn btn">
                             See more
                         </button>
                     </div>
@@ -505,7 +505,7 @@
                         </h3>
                         <p class="learn__descr descr__global">
                             Explore the latest events and find out where we&rsquo;re making waves in&nbsp;the industry </p>
-                        <button class="btn-reset learn__btn">
+                        <button class="btn-reset learn__btn btn">
                             See more
                         </button>
                     </div>
@@ -521,7 +521,7 @@
                     <div class="col-12">
                         <form action="#" method="post">
                             <input class="header__form-input footer__form-input" type="email" id="email" name="email" placeholder="Email" required>
-                            <input class="header__form-submit footer__form-submit" type="submit" value="Subscribe">
+                            <button class="footer__form-submit btn" type="submit" value="Subscribe">Subscribe</button>
                         </form>
                     </div>
                 </div>
@@ -569,37 +569,37 @@
                         <nav class="footer__nav">
                             <ul class="footer__list list-reset">
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">
+                                    <a href="#" class="footer__link nav__link">
                                         Home
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">
+                                    <a href="#" class="footer__link nav__link">
                                         About
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">
+                                    <a href="#" class="footer__link nav__link">
                                         Content Corner
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">
+                                    <a href="#" class="footer__link nav__link">
                                         Educational portal
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">
+                                    <a href="#" class="footer__link nav__link">
                                         Events
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">
+                                    <a href="#" class="footer__link nav__link">
                                         Contact
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link">
+                                    <a href="#" class="footer__link nav__link">
                                         Data Privacy Policy
                                     </a>
                                 </li>
