--- a/index.html
+++ b/index.html
@@ -556,14 +556,14 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-4 logo-wrapper">
+                    <div class="col-md-4 col-6 logo-wrapper">
                         <a href="#" class="footer__logo">
                             <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
                         </a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-4">
+                <div class="row footer__wrapper">
+                    <div class="col-md-4 order-md-1 col-6 order-2">
                         <div class="footer__info">
                             <p class="footer__descr">
                                 SMART-compliance GmbH
@@ -578,7 +578,7 @@
 
 
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 order-md-2 col-6 order-2">
                         <address class="footer__address flex">
                             <p class="address__descr">
                                 Registered office:
@@ -591,7 +591,7 @@
                             <a class="address__link" href="tel:+41765820974">+41&nbsp;765 82 0974</a>
                         </address>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 order-md-3 col-12 order-1">
                         <nav class="footer__nav">
                             <ul class="footer__list list-reset">
                                 <li class="footer__item">
