--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                     Learn more
                 </h2>
                 <div class="row">
-                    <div class="col-lg-4 col-md-12 ">
+                    <div class="col-lg-4 col-md-12 learn-more-col">
                         <div class="learn-more__wrapper learn-more__wrapper-1">
                             <h3 class="learn__heading subtitle__global">
                                 Content corner
@@ -507,7 +507,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12 ">
+                    <div class="col-lg-4 col-md-12 learn-more-col">
                         <div class="learn-more__wrapper learn-more__wrapper-2">
                             <h3 class="learn__heading subtitle__global">
                                 Educational portal
@@ -520,7 +520,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12 ">
+                    <div class="col-lg-4 col-md-12 learn-more-col">
                         <div class="learn-more__wrapper learn-more__wrapper-3 ">
                             <h3 class="learn__heading subtitle__global">
                                 Events
