--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="./css/normilize.css" rel="stylesheet">
     <link href="./css//bootstrap-grid.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link href="https://fonts.cdnfonts.com/css/pt-root-ui" rel="stylesheet">
 
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/media.css" rel="stylesheet">
