--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+
     <header class="header">
         <div class="container">
             <div class="row align-items-center">
@@ -37,27 +38,27 @@
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="#" class="nav__link">
+                                <a href="./about.html" class="nav__link">
                                     About
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="#" class="nav__link">
+                                <a href="./content-corner.html" class="nav__link">
                                     Content Corner
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="#" class="nav__link">
+                                <a href="./educational-portal.html" class="nav__link">
                                     Educational Portal
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="#" class="nav__link">
+                                <a href="./events.html" class="nav__link">
                                     Events
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="#" class="nav__link">
+                                <a href="./contact.html" class="nav__link">
                                     Contact
                                 </a>
                             </li>
@@ -66,38 +67,20 @@
                             </li>
                         </ul>
                     </nav>
-
                     <a href="http://eepurl.com/ioqyWo" target="_blank" class="subscription-link__header">Subscribe to our newsletter</a>
-
-
                     <button class="btn-reset burger" aria-label="Burger menu">
                         <span class="burger__line"> </span>
                         <span class="burger__line"> </span>
                         <span class="burger__line"> </span>
                     </button>
-
                 </div>
-
-
-
-
-                <!-- <div class="col-4">
-                    <div class="subscription-form flex">
-                        <form class="header__form" action="https://smart-compliance.us21.list-manage.com/subscribe/post?u=bc17ce4f71962085d51bc882e&amp;id=74a5c828cb&amp;f_id=00fee2e6f0" method="post">
-                            <label class="header__form-label" for="email">Subscribe to&nbsp;our newsletter</label>
-                            <input class="header__form-input" type="email" id="email" name="email" placeholder="Email">
-                            <button class="header__form-submit btn" type="submit" value="Subscribe">Subscribe</button>
-                        </form>
-                    </div>
-                </div>
-                 -->
-
             </div>
         </div>
     </header>
-    <main class="main">
-        <section class="hero">
 
+    <main class="main">
+
+        <section class="hero">
             <div class="container hero__container">
                 <div class="row">
                     <div class="col-xl-4 col-md-6 col-sm-7 hero__content">
@@ -124,7 +107,6 @@
                         <h3 class="about-us__subtitle subtitle__global">
                             Take the right steps from the start
                         </h3>
-
                         <ul class="about-us__list list-reset descr__global">
                             <li class="about-us__list-item">
                                 Are you a&nbsp;fintech company?
@@ -154,17 +136,16 @@
                     </div>
                     <div class="col-lg-6 col-12">
                         <div class="calendly-container">
-
                             <h3 class="calendly__subtitle about-us__subtitle subtitle__global">
                                 Book your consulatation now
                             </h3>
-
                             <a class="calendly__link btn" href="https://calendly.com/ekaterina-anthony/30min" target="_blank">CALENDLY</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="news section__global">
             <div class="container">
                 <h2 class="news__title heading__global">
@@ -219,12 +200,10 @@
                                         <a href="https://smartcompliance.podia.com/creating-legal-entity-in-switzerland-2023" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
-
                             </div>
                             <div class="swiper-pagination"></div>
                             <div class="swiper-button-prev"></div>
                             <div class="swiper-button-next"></div>
-
                         </div>
                     </div>
                 </div>
@@ -321,6 +300,7 @@
                 </div>
             </div>
         </section>
+
         <section class="services section__global">
             <div class="container">
                 <h2 class="services__title heading__global">
@@ -353,7 +333,6 @@
                                     </p>
                                 </div>
                             </div>
-
                             <div class="accordion-item">
                                 <button class="accordion-button">
                                     Digital Assets/DLT compliance
@@ -373,7 +352,6 @@
                                     </p>
                                 </div>
                             </div>
-
                             <div class="accordion-item">
                                 <button class="accordion-button">
                                     Regulatory consulting
@@ -413,7 +391,6 @@
                                     </p>
                                 </div>
                             </div>
-
                             <div class="accordion-item">
                                 <button class="accordion-button">
                                     Administrative support and relocation
@@ -449,7 +426,6 @@
                                     </ul>
                                 </div>
                             </div>
-
                             <div class="accordion-item">
                                 <button class="accordion-button">
                                     For Asset Managers
@@ -471,7 +447,6 @@
                                     </p>
                                 </div>
                             </div>
-
                             <div class="accordion-item">
                                 <button class="accordion-button">
                                     For FinTech Start-ups
@@ -500,6 +475,7 @@
                 </div>
             </div>
         </section>
+
         <section class="learn-more section__global">
             <div class="container">
                 <h2 class="learn__heading heading__global">
@@ -555,16 +531,9 @@
                         Subscribe to our newsletter
                     </a>
                 </h2>
-                <!-- <div class="row">
-                    <div class="col-12">
-                        <form action="https://smart-compliance.us21.list-manage.com/subscribe/post" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
-                            <input class="header__form-input footer__form-input" type="email" id="email" name="email" placeholder="Email" required>
-                            <button class="footer__form-submit btn" type="submit" value="Subscribe">Subscribe</button>
-                        </form>
-                    </div>
-                </div> -->
             </div>
         </section>
+
         <footer class="footer">
             <div class="container">
                 <div class="row">
@@ -587,8 +556,6 @@
                                 Nummer: CHE-250.927.503
                             </p>
                         </div>
-
-
                     </div>
                     <div class="col-md-4 order-md-2 col-6 order-2">
                         <address class="footer__address flex">
@@ -654,7 +621,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/index.js"></script>
-
 </body>
 
 </html>
