--- a/about.html
+++ b/about.html
@@ -252,37 +252,37 @@
                         <nav class="footer__nav">
                             <ul class="footer__list list-reset">
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./index.html" class="footer__link nav__link">
                                         Home
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./about.html" class="footer__link nav__link">
                                         About
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./content-corner.html" class="footer__link nav__link">
                                         Content Corner
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./educational-portal.html" class="footer__link nav__link">
                                         Educational portal
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./events.html" class="footer__link nav__link">
                                         Events
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./contact.html" class="footer__link nav__link">
                                         Contact
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./data-privacy.html" class="footer__link nav__link">
                                         Data Privacy Policy
                                     </a>
                                 </li>
