--- a/index.html
+++ b/index.html
@@ -579,32 +579,32 @@
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./about.html" class="footer__link nav__link">
                                         About
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./content-corner.html" class="footer__link nav__link">
                                         Content Corner
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./educational-portal.html" class="footer__link nav__link">
                                         Educational portal
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./events.html" class="footer__link nav__link">
                                         Events
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./contact.html" class="footer__link nav__link">
                                         Contact
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./data-privacy.html" class="footer__link nav__link">
                                         Data Privacy Policy
                                     </a>
                                 </li>
