--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-3 col-6">
-                    <a href="#" class="header__logo">
+                    <a href="./index.html" class="header__logo">
                         <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
                     </a>
                 </div>
@@ -103,7 +103,7 @@
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <p class="meet-founder__descr descr__global">
-                            <b class="meet-founder_bold">Ekaterina Anthony</b>, the founder of&nbsp;SMART-compliance GmbH, provides compliance support to&nbsp;fintech start-ups.
+                            <b class="text_bold">Ekaterina Anthony</b>, the founder of&nbsp;SMART-compliance GmbH, provides compliance support to&nbsp;fintech start-ups.
                         </p>
                         <p class="meet-founder__descr descr__global">
                             Ekaterina has served over 20&nbsp;years in&nbsp;various roles within the exchanges, fin-tech, and commodity trading. Based out of&nbsp;London, she was head of&nbsp;the Moscow Stock Exchange office in&nbsp;the&nbsp;UK for the global business operation, cross border compliance and clients&rsquo; onboarding. Also served as&nbsp;head of&nbsp;representation for Eastern Europe for the commodity valuation firm S&amp;P Global Platts. Before founding her company, she worked for 2,5 years at&nbsp;gwp in&nbsp;crypto/DLT sector compliance.
@@ -216,7 +216,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-6 logo-wrapper">
-                        <a href="#" class="footer__logo">
+                        <a href="./index.html" class="footer__logo">
                             <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
                         </a>
                     </div>
