--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-3 col-6">
-                    <a href="#" class="header__logo">
+                    <a href="./index.html" class="header__logo">
                         <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
                     </a>
                 </div>
@@ -33,7 +33,7 @@
                     <nav class="header__nav">
                         <ul class="header__nav-list list-reset flex">
                             <li class="nav__item">
-                                <a href="#" class="nav__link">
+                                <a href="./index.html" class="nav__link">
                                     Home
                                 </a>
                             </li>
@@ -538,7 +538,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-6 logo-wrapper">
-                        <a href="#" class="footer__logo">
+                        <a href="./index.html" class="footer__logo">
                             <img src="./img/logo-white.svg" alt="Logo SMART-compliance">
                         </a>
                     </div>
@@ -574,7 +574,7 @@
                         <nav class="footer__nav">
                             <ul class="footer__list list-reset">
                                 <li class="footer__item">
-                                    <a href="#" class="footer__link nav__link">
+                                    <a href="./index.html" class="footer__link nav__link">
                                         Home
                                     </a>
                                 </li>
