--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-xl-4 col-md-6 col-sm-7 hero__content">
                         <div class="hero__info pages__hero flex">
-                            <h1 class="hero__heading about__heading">
+                            <h1 class="hero__heading about__heading pages__heading">
                                 About us
                             </h1>
 
