--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 
         <section class="about-us section__global">
             <div class="container">
+                <h1 class="hero__heading-sm hero__heading">
+                    Empowering Growth Through Compliance &amp;&nbsp;Efficiency
+                </h1>
+
                 <h2 class="about-us__heading heading__global">
                     Tell&nbsp;us about your business
                 </h2>
