--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                             </p>
                             <a href="./content-corner.html" class="learn__link">
                                 See more
-                            </a> 
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 learn-more-col">
@@ -509,7 +509,7 @@
                             </p>
                             <a href="./educational-portal.html" class="learn__link">
                                 See more
-                            </a> 
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 learn-more-col">
@@ -521,7 +521,7 @@
                                 Explore the latest events and find out where we&rsquo;re making waves in&nbsp;the industry </p>
                             <a href="./events.html" class="learn__link">
                                 See more
-                            </a> 
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -572,6 +572,11 @@
 
                             <a class="address__link" href="mailto:contact@smart-compliance.ch">contact@smart-compliance.ch</a>
                             <a class="address__link" href="tel:+41765820974">+41&nbsp;765 82 0974</a>
+                            <a href="https://www.linkedin.com/company/smart-compliance-gmbh/" class="adress__link li__logo">
+                                <svg width="50px" height="50px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none">
+                                    <path fill="none" d="M12.225 12.225h-1.778V9.44c0-.664-.012-1.519-.925-1.519-.926 0-1.068.724-1.068 1.47v2.834H6.676V6.498h1.707v.783h.024c.348-.594.996-.95 1.684-.925 1.802 0 2.135 1.185 2.135 2.728l-.001 3.14zM4.67 5.715a1.037 1.037 0 01-1.032-1.031c0-.566.466-1.032 1.032-1.032.566 0 1.031.466 1.032 1.032 0 .566-.466 1.032-1.032 1.032zm.889 6.51h-1.78V6.498h1.78v5.727zM13.11 2H2.885A.88.88 0 002 2.866v10.268a.88.88 0 00.885.866h10.226a.882.882 0 00.889-.866V2.865a.88.88 0 00-.889-.864z" />
+                                </svg>
+                            </a>
                         </address>
                     </div>
                     <div class="col-md-4 order-md-3 col-12 order-1">
