--- a/about.html
+++ b/about.html
@@ -5,10 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMART-compliance</title>
+
+    <meta name="description" content="We provide support to start-ups, small and middle-size businesses in complying with regulatory standards and building an efficient business structure.">
+    <meta name="keywords" content="Switzerland, start-up support, regulatory compliance, business structure, small businesses, middle-size businesses, fintech, business license, client onboarding, internal control system, ICS, business risks, operational bank account, relocation support">
+    <meta name="author" content="SMART-compliance GmbH">
+    <meta name="robots" content="index, follow">
+
     <meta property="og:title" content="Home - Smart Compliance GmbH">
     <meta property="og:description" content="We provide support to start-ups, small and middle-size businesses in complying with regulatory standards and building an efficient business structure. DEFINE, DECIDE AND IMPLEMENT Tell us about your business The right steps from the start • Are you a fintech company? • Do you require a license to operate your business model? • How do ...">
     <meta property="og:url" content="https://smart-compliance.ch/">
-    <meta property="og:site_name" content="Smart Compliance GmbH">
+    <meta property="og:site_name" content="SMART-compliance GmbH">
+
+
+    <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
 
     <link href="./css/normilize.css" rel="stylesheet">
     <link href="./css//bootstrap-grid.min.css" rel="stylesheet">
@@ -244,9 +270,9 @@
                                 Landis + Gyr-Strasse 1, 6300&nbsp;Zug, Switzerland
                             </p>
 
-                            <a class="address__link" href="mailto:contact@smart-compliance.ch">contact@smart-compliance.ch</a>
+                            <a class="address__link href="https://mailhide.io/e/rhyK8ZSC" onclick="popup=window.open('https://mailhide.io/e/rhyK8ZSC','mailhidepopup','width=580,height=635'); return false;">Send an email</a> 
                             <a class="address__link" href="tel:+41765820974">+41&nbsp;765 82 0974</a>
-                            <a href="https://www.linkedin.com/company/smart-compliance-gmbh/" class="adress__link li__logo">
+                            <a href="https://www.linkedin.com/company/smart-compliance-gmbh/" class="address__link li__logo">
                                 <svg width="50px" height="50px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none">
                                     <path fill="none" d="M12.225 12.225h-1.778V9.44c0-.664-.012-1.519-.925-1.519-.926 0-1.068.724-1.068 1.47v2.834H6.676V6.498h1.707v.783h.024c.348-.594.996-.95 1.684-.925 1.802 0 2.135 1.185 2.135 2.728l-.001 3.14zM4.67 5.715a1.037 1.037 0 01-1.032-1.031c0-.566.466-1.032 1.032-1.032.566 0 1.031.466 1.032 1.032 0 .566-.466 1.032-1.032 1.032zm.889 6.51h-1.78V6.498h1.78v5.727zM13.11 2H2.885A.88.88 0 002 2.866v10.268a.88.88 0 00.885.866h10.226a.882.882 0 00.889-.866V2.865a.88.88 0 00-.889-.864z" />
                                 </svg>
