--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     Tell&nbsp;us about your business
                 </h2>
                 <div class="row">
-                    <div class="col-lg-6 col-12">
+                    <div class="col-xl-6 col-12">
                         <h3 class="about-us__subtitle subtitle__global">
                             Take the right steps from the start
                         </h3>
@@ -162,7 +162,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-lg-6 col-12">
+                    <div class="col-xl-6 col-12">
                         <div class="calendly-container">
                             <h3 class="calendly__subtitle about-us__subtitle subtitle__global">
                                 Book your consulatation now
