--- a/educational-portal.html
+++ b/educational-portal.html
@@ -124,12 +124,12 @@
         <section class="educational-portal section__global">
             <div class="container">
                 <h2 class="educational-portal__heading heading__global">
-                    Explore Our Education Portal
+                    Explore Our Educational Portal
                 </h2>
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <p class="educational-portal__descr descr__global">
-                            Welcome to&nbsp;<b class="text_bold">SMART-compliance&rsquo;s Education Portal</b>, your gateway to&nbsp;valuable insights and resources for entrepreneurs.
+                            Welcome to&nbsp;<b class="text_bold">SMART-compliance&rsquo;s Educational Portal</b>, your gateway to&nbsp;valuable insights and resources for entrepreneurs.
                         </p>
                         <p class="educational-portal__descr descr__global">
                             Are you eager to&nbsp;stay informed about our webinars, educational materials, and special offers? Look no&nbsp;further&nbsp;&mdash; our Education Portal is&nbsp;the hub for all things compliance and business guidance.
