--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
                                     <div class="swiper__content">
                                         <a href="./events.html" class="swiper__section-link">EVENTS</a>
                                         <h3 class="swiper__heading heading__global">
-                                            <a class="swiper__heading-link" href="http://smart-compliance.ch/events/" target="_blank">
+                                            <a class="swiper__heading-link" href="./events/world-crypto-forum-in-davos.html" target="_blank">
                                                 SMART-compliance partners with World Crypto Forum in Davos
                                             </a>
 
                                         </h3>
-                                        <a href="https://smart-compliance.ch/events/" target="_blank" class="swiper__link">Read more</a>
+                                        <a href="./events/world-crypto-forum-in-davos.html" target="_blank" class="swiper__link">Read more</a>
                                     </div>
                                 </div>
                                 <div class="swiper-slide slide-2">
